@@ -1,3 +1,6 @@
+* Mon Oct 29 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.2.1-0
+- Fix a bad URL in the README.md
+
 * Mon Oct 29 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.2.0-0
 - Update badges and contribution guide URL in README.md
 
